# embedded_smart_toy

./: .gitignore  LICENSE  README.md
demos/: build.sh
demos/mbf_arcface/: CMakeLists.txt  evaluate_onnx.py
demos/mbf_arcface/model/: w600k_mbf.rknn
demos/mbf_arcface/src/: cosine_similarity.h  eval.cc  main.cc  mbf_arcface.cc  postprocess.h  yolov8.h
demos/utils/: image_utils.c
demos/yolov8/: CMakeLists.txt
demos/yolov8/model/: widerface_best.rknn
demos/yolov8/src/: postprocess.cc  postprocess.h
demos/yolov8_pose/: CMakeLists.txt
demos/yolov8_pose/src/: main.cc  postprocess.cc  postprocess.h  yolov8.h
demos/yolov8_pose/src/rknpu2/: yolov8_rv1106_1103.cc
yolov8/: compile_commands.json
